poc/vertx-layer-as-pod-http/k8s-local/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: risk-boundary-policy
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-controller-to-usecase
spec:
  podSelector:
    matchLabels: { boundary: usecase }
  ingress:
    - from:
        - podSelector:
            matchLabels: { boundary: controller }
      ports:
        - protocol: TCP
          port: 8081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-usecase-to-repository
spec:
  podSelector:
    matchLabels: { boundary: repository }
  ingress:
    - from:
        - podSelector:
            matchLabels: { boundary: usecase }
      ports:
        - protocol: TCP
          port: 8082
